<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hi Pixiv</string>

    <string name="login_welcome">Hi Pixiv</string>
    <string name="login_pid">Pixiv ID</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_no_account">No account?</string>
    <string name="login_authenticate">Authenticating…</string>

    <string name="login_username_no_input">Please enter Pixiv ID!</string>
    <string name="login_password_no_input">Please enter password!</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_canceled">Login is canceled!</string>
    <string name="login_cancel_failed">Cancel login failed!</string>
    <string name="app_login_failed">Login failed, application errors!</string>
    <string name="app_no_network_set">No available network, check whether the set?</string>

    <string name="app_no_network">No network available!</string>
    <string name="app_recovery_network">Network recovery!</string>
    <string name="app_dialog_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="app_dialog_ok">OK</string>
    <string name="more">More</string>
    <string name="help">Help</string>
    <string name="no_data">No Data</string>
    <string name="load_err">Wrong!</string>
    <string name="mute">Muted</string>
    <string name="no_more_data">No More Data!</string>
    <string name="is_last_data">This is the last set of data!</string>
    <string name="senior_member">Pixiv Senior Member</string>
    <string name="general_user">Pixiv General User</string>
    <string name="recommended">Recommended for you</string>
    <string name="ranking">Ranking</string>
    <string name="load_data_failed">An error occurred,Whether to regain it?</string>
    <string name="load_data_timeout">Request timeout,Whether to regain it?</string>
    <string name="see_more">See More</string>
    <string name="content_illust">Details</string>
    <string name="content_user">User details</string>
    <string name="content_related">Related works</string>
    <string name="no_comments">No Comments</string>
    <string name="no_related">No related works</string>
    <string name="work_comments">Works comments</string>

    <string name="save_image">Save</string>
    <string name="not_load">Could not load</string>

    <!-- Search -->
    <string name="search_tips">Search Tips</string>
    <string name="search_word_is_pid">%s may be illustrator ID, need to open directly?</string>

    <string name="out_format">yyyy-MM-dd HH:mm:ss</string>

    <!-- Mute -->
    <!--<string name="mute_title">Please select a mask item</string>-->

    <!-- Custom Url Schema-->
    <string name="host_pixiv">illusts</string>
    <string name="host_user">users</string>

    <string name="newest_follow_illust_name">Filter</string>
    <string-array name="newest_follow_illust_items">
        <item>All</item>
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string name="collect_filter_name">Tag Filter</string>
    <string-array name="filter_items">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <!-- Ranking Filter -->
    <string name="select_ranking">Choose Ranking</string>
    <string name="ranking_illust_title">Illust Ranking</string>
    <string name="ranking_manga_title">Manga Ranking</string>
    <string-array name="ranking_illust_items">
        <item>Daily</item>
        <item>Popular amongst males</item>
        <item>Popular amongst females</item>
        <item>Original</item>
        <item>Rookie</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>R-18 Daily</item>
        <item>R-18 Weekly</item>
        <item>R-18 Popular amongst males</item>
        <item>R-18 Popular amongst females</item>
        <item>R-18G</item>
    </string-array>
    <string-array name="ranking_manga_items">
        <item>Daily</item>
        <item>Rookie</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>R-18 Daily</item>
        <item>R-18 Weekly</item>
        <item>R-18G</item>
    </string-array>

    <!-- Search Filter -->
    <string name="search_filter_title">Filter Search</string>
    <string name="search_filter">Search</string>
    <string name="sort_name">Sort</string>
    <string-array name="sort_items">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string-array name="sort_premium_items">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Popularity</item>
    </string-array>

    <string name="search_target_name">Target</string>
    <string-array name="search_target_items">
        <item>Tag Partial</item>
        <item>Tag Total</item>
        <item>Title Caption</item>
    </string-array>

    <string name="duration_name">Duration</string>
    <string-array name="duration_items">
        <item>Noting</item>
        <item>Last Day</item>
        <item>Last Week</item>
        <item>Last Month</item>
    </string-array>

    <!-- Home -->
    <string name="home_name">Home</string>
    <string name="home_illust">Illustrations</string>
    <string name="home_mange">Manga</string>
    <!--<string name="home_novel">Novels</string>-->
    <!-- Newest -->
    <string name="newest_name">Newest</string>
    <string name="newest_follow">Following</string>
    <string-array name="newest_follow_tab">
        <item>Illust/Manga</item>
        <!--<item>Novels</item>-->
        <item>Recommended User</item>
    </string-array>
    <string name="newest_new">Newest</string>
    <string-array name="newest_new_tab">
        <item>Illustrations</item>
        <item>Manga</item>
        <!--<item>Novels</item>-->
    </string-array>
    <string name="newest_my_pixiv">My Pixiv</string>
    <string-array name="newest_my_pixiv_tab">
        <item>Illust/Manga</item>
        <!--<item>Novels</item>-->
    </string-array>
    <!-- Pixivision -->
    <string name="pixivision_name">Pixivision</string>
    <!-- collect -->
    <string name="collect_name">Collection</string>
    <string-array name="collect_tab">
        <item>Illust/Manga</item>
        <!--<item>Novels</item>-->
    </string-array>
    <!-- Browsing History -->
    <string name="browsing_name">Browsing History</string>
    <string-array name="browsing_tab">
        <item>Illust/Manga</item>
        <!--<item>Novels</item>-->
    </string-array>
    <!-- User -->
    <string name="user_name">User</string>
    <string-array name="user_tab">
        <item>Following</item>
        <item>Followers</item>
        <item>My Pixiv</item>
    </string-array>
    <!-- muted -->
    <string name="muted_setting">Mute Settings</string>
    <!-- Setting -->
    <string name="setting_name">Settings</string>

    <!-- Search -->
    <string name="search_name">Search</string>
    <string-array name="search_tab">
        <item>Illust/Manga</item>
        <!--<item>Novels</item>-->
        <item>User</item>
    </string-array>

    <string name="activity_login">info.hzvtc.hipixiv.login</string>
    <string name="activity_main">info.hzvtc.hipixiv.main</string>
    <string name="activity_ranking">info.hzvtc.hipixiv.ranking</string>
    <string name="activity_search">info.hzvtc.hipixiv.search</string>
    <string name="activity_content">info.hzvtc.hipixiv.content</string>
    <string name="activity_image">info.hzvtc.hipixiv.image</string>
    <string name="activity_related">info.hzvtc.hipixiv.related</string>


    <string name="extra_string">String</string>
    <string name="extra_json">Json</string>
    <string name="extra_int">Int</string>
    <string name="extra_list">List</string>

    <string name="extra_type">Type</string>
    <string name="extra_type_illust">Illust</string>
    <string name="extra_type_user">User</string>

    <string name="extra_search_tag">Tag</string>

    <string-array name="restrict_parameters">
        <item>all</item>
        <item>public</item>
        <item>private</item>
    </string-array>

    <string-array name="double_restrict_parameters">
        <item>public</item>
        <item>private</item>
    </string-array>

    <string-array name="default_tag_name_items">
        <item>All</item>
        <item>Uncategorized</item>
    </string-array>

    <!-- Ranking Parameter-->
    <string-array name="ranking_illust_parameters">
        <item>day</item>
        <item>day_male</item>
        <item>day_female</item>
        <item>week_original</item>
        <item>week_rookie</item>
        <item>week</item>
        <item>month</item>
        <item>day_r18</item>
        <item>week_r18</item>
        <item>day_male_r18</item>
        <item>day_female_r18</item>
        <item>week_r18g</item>
    </string-array>
    <string-array name="ranking_manga_parameters">
        <item>day_manga</item>
        <item>week_rookie_manga</item>
        <item>week_manga</item>
        <item>month_manga</item>
        <item>day_r18_manga</item>
        <item>week_r18_manga</item>
        <item>week_r18g_manga</item>
    </string-array>

    <!-- Search Parameter-->
    <string-array name="search_sort_parameters">
        <item>date_desc</item>
        <item>date_asc</item>
        <item>popular_desc</item>
    </string-array>

    <string-array name="search_target_parameters">
        <item>partial_match_for_tags</item>
        <item>exact_match_for_tags</item>
        <item>title_and_caption</item>
    </string-array>

    <string-array name="search_duration_parameters">
        <item>null</item>
        <item>within_last_day</item>
        <item>within_last_week</item>
        <item>within_last_month</item>
    </string-array>

    <string name="empty">&#160;</string>

    <string name="icon_heart">{faw_heart}&#160;</string>
    <string name="icon_trophy">{faw_trophy}&#160;</string>
    <string name="icon_chevron_right">&#160;{faw_chevron_right}</string>
    <string name="icon_page">{faw_clone}&#160;</string>
    <string name="icon_eye">{faw_eye}&#160;</string>

    <string name="icon_muted">{faw_eye_slash}</string>
    <string name="icon_dissatisfied">{gmd_sentiment_dissatisfied}</string>
    <string name="icon_very_dissatisfied">{gmd_sentiment_very_dissatisfied}</string>
    <string name="icon_satisfied_neutral">{gmd_sentiment_neutral}</string>
    <string name="icon_tag">{faw_tag}</string>
    <string name="icon_picture_o">{faw_picture_o}</string>
    <string name="icon_comments">{faw_comments}</string>
</resources>
