<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        <TextView
            android:text="@string/sort_name"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>
        <TextView
            android:text="@string/search_target_name"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/search_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>
        <TextView
            android:text="@string/duration_name"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"/>
    </LinearLayout>
</layout>
